fix: remove horizontal scroll caused by footer width (#111)

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -54,7 +54,7 @@ footer .footer-black {
   left: 0;
   color: var(--secondary-text-color);
   background-color: var(--footer-background-color);
-  width: 100vw;
+  width: 100%;
 }
 
 footer .footer-black > div {
